# optizelle_tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc  optizelle_compile_notes.md  optizelle_vs_knitro.cc  rosenbrock.cc  simple_inequalities_and_constraints.cc
inputs/: newton_cg.json  sr1.json
